# Shortcutspy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
automation/: build_and_install.sh  create_shortcut_stub.applescript  generate_actions_doc.py  run_create_shortcut.sh
examples/: clipboard_helfer.json  clipboard_helfer.py  clipboard_helfer.shortcut  demo.py  produktivitaets_hub.py  setup_assistent.py
shortcutspy/: __init__.py  actions.py  decompile.py  export.py  flow.py  shortcut.py  types.py
tests/: test_actions.py  test_flow.py  test_shortcut.py
wiki/: Actions.md  Aktionen.md  Core-Concepts-EN.md  Core-Concepts.md  Decompiler-EN.md  Decompiler.md  FAQ-EN.md  FAQ.md  Getting-Started-EN.md  Getting-Started.md  Home-EN.md  Home.md  Installation-&-Setup-EN.md  Installation-&-Setup.md  Troubleshooting-EN.md  Troubleshooting.md  _Navigation.md  _Sidebar.md
